--- a/tguilloryiii.github.io/main.css
+++ b/tguilloryiii.github.io/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Poppins';
-    src: url('assets/fonts/Poppins/Poppins-ExtraLight.ttf')
+    src: url('./assets/fonts/Poppins/Poppins-ExtraLight.ttf');
 }
 
 :root {
@@ -18,6 +18,7 @@
 html {
     scroll-behavior: smooth;
     background: var(--main-color);
+    color-scheme: dark;
 }
 
 body {
@@ -33,7 +34,7 @@ a {
 }
 
 p {
-    font-weight: 4000;
+    font-weight: 400;
     color: var(--font-color);
 }
 
