--- a/tguilloryiii.github.io/main.css
+++ b/tguilloryiii.github.io/main.css
@@ -19,6 +19,7 @@ html {
     scroll-behavior: smooth;
     background: var(--main-color);
     color-scheme: dark;
+    transition: background-color 0.3s ease;
 }
 
 body {
